# Hotel_Reservation_System

./: vercel.json
backend/: .env  main.py  pyproject.toml  seed.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/admin/: amenities.py  dashboard.py  feedback.py  guests.py  payments.py  promotions.py  reports.py  reservations.py  room_types.py  rooms.py  settings.py  staff.py
backend/app/models/: __init__.py  amenity.py  feedback.py  payment.py  promotion.py  reservation.py  room.py  room_type.py  staff.py  user.py
backend/app/routers/: amenities.py  auth.py  availability.py  feedback.py  payments.py  promotions.py  reservations.py  room_types.py  rooms.py  settings.py  telegram_webhook.py  upload.py
backend/app/schemas/: amenity.py  common.py  feedback.py  payment.py  promotion.py  reservation.py  room.py  room_type.py  staff.py  user.py
backend/app/services/: auth_service.py  availability_service.py  booking_service.py  email_service.py  payment_service.py  report_service.py  telegram_service.py
backend/app/utils/: date_utils.py  file_utils.py  pagination.py  security.py
backend/uploads/settings/: payment.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/services/: adminService.ts  api.ts  authService.ts  bookingService.ts  feedbackService.ts  paymentService.ts  roomService.ts
frontend/src/store/: authStore.ts  bookingStore.ts
frontend/src/types/: index.ts
(+64 files in other folders)
